--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "gapps-task",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0"
+    "angular": "^1.4.0",
+    "angular-directive.g-signin": "0.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
