--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
-    "angular-directive.g-signin": "0.1.2"
+    "angular-directive.g-signin": "0.1.2",
+    "ng-google-signin": "^0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
