--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "angular": "^1.4.0",
     "angular-directive.g-signin": "0.1.2",
-    "ng-google-signin": "^0.1.0"
+    "ng-google-signin": "^0.1.0",
+    "angular-ui-router": "^0.2.18",
+    "angular-material": "^1.0.6",
+    "angular-chart.js": "^0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
